--- a/about.html
+++ b/about.html
@@ -4,6 +4,9 @@
 	<title> Landing page - Kshirja Diwan</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="styles/about.css">
 <link rel="stylesheet" type="text/css" href="styles/navbar.css">
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -32,9 +35,9 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-4">
-			<div class="card text-center">
+			<div class="card text-center profile-card">
 				<div class="card-block">
-					<img class=" rounded-circle profile-pic" src="images/passport.jpg">
+					<img class=" rounded-circle profile-pic animated pulse infinite" src="images/passport.jpg">
 					<h4 class="card-title"> Live to Travel</h4>
 					<p class="card-text">Travelling is Not something you need to be good at. Its just something you do LIKE BREATHING.</p>
 					<div class="card-footer">
@@ -62,8 +65,14 @@
 						<p class="card-text"> You'll never know about me, unless you spend time with me </p>
 				</div>
 			</div>
+				<div class="card trasparent">
+					<div class="card-block">
+					<iframe class="video" width="615" height="320" src="https://www.youtube.com/embed/MeTQplAmuTU" frameborder="0" allowfullscreen></iframe>
+				</div>
+			</div>
+				
+			</div>
 		</div>
-	</div>
 </div>
 
 
